# rlp-rs

./: Cargo.toml  README.md
fuzz/: Cargo.toml  create_corpus.py
fuzz/fuzz_targets/: pack_rlp.rs  transaction_serde.rs  tx_deser.rs  tx_hash.rs  tx_serde.rs
rlp/: Cargo.toml
rlp/benches/: nested_lists.rs
rlp/src/: de.rs  lib.rs  ser.rs
src/: de.rs  lib.rs  ser.rs
types/: Cargo.toml
types/benches/: access_list_block.rs  block.rs  block_decoding.rs  bloom.rs  dynamic_fee_block.rs  legacy_block.rs  legacy_header.rs
types/src/: block.rs  lib.rs  primitives.rs  transaction.rs
