[workspace]
members = ["rlp", "types", "fuzz"]
default_member = "rlp"
resolver = "2"

[workspace.dependencies]
rlp-rs = { path = "./rlp" }
serde_bytes = "0.11.15"
serde = { version = "1.0.204", features = ["derive"] }
libfuzzer-sys = "0.4"

[patch.crates-io]
serde_bytes = { git = "https://github.com/iFrostizz/bytes" }

[profile.bench]
debug = true

