[package]
name = "rlp-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true }
rlp-rs = { path = "../rlp" }
rlp-types = { path = "../types", features = ["fuzzing", "test-utils"] }

[[bin]]
name = "tx_serde"
path = "fuzz_targets/tx_serde.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tx_hash"
path = "fuzz_targets/tx_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tx_deser"
path = "fuzz_targets/tx_deser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pack_rlp"
path = "fuzz_targets/pack_rlp.rs"
test = false
doc = false
bench = false
