[package]
name = "rlp-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
rlp-rs = { workspace = true }
libfuzzer-sys = { workspace = true, features = ["arbitrary-derive"], optional = true }
sha2 = "0.10.8"

[dev-dependencies]
hex = "0.4.3"
criterion = "0.3"

[[bench]]
name = "block_decoding"
harness = false

[features]
fuzzing = ["dep:libfuzzer-sys"]
test-utils = []
