[package]
name = "rlp-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
rlp-rs = { workspace = true }
libfuzzer-sys = { workspace = true, features = ["arbitrary-derive"], optional = true }
sha2 = "0.10.8"
sha3 = "0.10.8"

[dev-dependencies]
criterion = "0.3"
hex = "0.4.3"

[[bench]]
name = "legacy_block"
harness = false

[[bench]]
name = "access_list_block"
harness = false

[[bench]]
name = "dynamic_fee_block"
harness = false

[[bench]]
name = "bloom"
harness = false

[features]
fuzzing = ["dep:libfuzzer-sys"]
test-utils = []

[profile.bench]
debug = true
